--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,62 @@
-h1{
-    color: red;
+
+  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+.hero{
+    background-image: url(../images/cow.jpg);
+    /* width: 400px; */
+    background-position: top center;
+    height: 100vh;
+    /* background-repeat: no-repeat; */
+    background-size:cover;
+}
+.hero h1{
+    color: azure;
+    text-align: center;
+    font-size: 100px;
+    font-weight: bolder;
+    font-family:cursive;
+    word-spacing: 15px;
+    letter-spacing: 10px;
+    padding-top: 60px;
+}
+.article, #cow-type{
+    width: 90%;
+    margin: 60px auto;
+    background-color: rgb(22, 216, 216);
+    border-style: solid;
+    border-color: yellow;
+    border-width: 10px;
+    border-radius: 5px;
+    padding: 60px;
+}
+.article h2{
+    text-align: center;
+    font-size: 48px;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-style: solid;
+    border-color: yellow;
+    /* border-width: 2px; */
+    /* border-radius: 5px; */
+    padding-bottom: 30px;
+    margin-bottom: 60px;
+
+}
+.article p{
+    font-size: 28px;
+    line-height: 2em;
+}
+.article p .milk{
+font-size: 2rem;
+background-color: yellow;
+color: blue;
+width: 600px;
+/* display: inline-block; */
+
 }
