--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
     height: 100vh;
     /* background-repeat: no-repeat; */
     background-size:cover;
+    clip-path: polygon(50% 0%, 100% 1%, 98% 98%, 5% 87%, 0 1%);
 }
 .hero h1{
     color: azure;
@@ -28,13 +29,10 @@
     width: 90%;
     margin: 60px auto;
     background-color: rgb(22, 216, 216);
-    border-style: solid;
-    border-color: yellow;
-    border-width: 10px;
-    border-radius: 5px;
     padding: 60px;
+    background: linear-gradient(45deg,pink,rgb(136, 136, 202));
 }
-.article h2{
+.article h2, #cow-type h2{
     text-align: center;
     font-size: 48px;
     border-top: 0;
@@ -59,4 +57,17 @@ color: blue;
 width: 600px;
 /* display: inline-block; */
 
+}
+.cow-image{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+    /* flex-wrap: wrap; */
+}
+.cow-image div{
+    width: 300px;
+}
+.cow-image img{
+    width: 100%;
 }
